added pricing tags

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                     <div class="p-8 text-center">
                         <h3 class="text-xl font-bold mb-3">Liščí kabelka</h3>
                         <p class="text-gray-600 text-sm">Ručně šitá kabelka s motivem lišky.</p>
+
+                        <div class="mt-6">
+                            <span class="inline-block bg-brand-sage text-brand-brown px-5 py-2 rounded-full text-sm font-bold shadow-sm">
+                                Cena od 450 Kč
+                            </span>
+                        </div>
                     </div>
                 </div>
 
