fixed hamburger and image proportion

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </script>
 
     <style>
-        /* CSS pro plynulou animaci */
+        /* CSS pro plynulou animaci FAQ */
         .faq-content {
             transition: grid-template-rows 0.4s ease-out;
             display: grid;
@@ -79,7 +79,6 @@
         <div class="h-20 flex-shrink-0"></div>
 
         <div class="flex-1 flex flex-col justify-center items-center px-4 text-center min-h-0">
-            
             <div class="container mx-auto max-w-4xl z-10 flex flex-col items-center">
                 <div class="relative inline-block group mb-4 md:mb-8 flex-shrink">
                     <img src="main-image.png" alt="Ilustrace The Healing Hearts" 
@@ -95,7 +94,6 @@
                     </p>
                 </div>
             </div>
-
         </div>
 
         <div class="flex-shrink-0 h-20 flex items-center justify-center animate-bounce text-brand-rust z-20 pb-4">
@@ -129,9 +127,27 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-10">
+
+                <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 group flex flex-col h-full">
+                    <div class="aspect-[4/3] w-full bg-gray-100 overflow-hidden relative flex-shrink-0">
+                        <img src="makes/otter.jpg" alt="Velká vydra" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-black/10 group-hover:bg-transparent transition-colors duration-300"></div>
+                    </div>
+                    <div class="p-8 text-center flex-grow flex flex-col justify-between">
+                        <div>
+                            <h3 class="text-xl font-bold mb-3">Velká vydra</h3>
+                            <p class="text-gray-600 text-sm">Ručně šitý plyšák vydry.</p>
+                        </div>
+                        <div class="mt-6">
+                            <span class="inline-block bg-brand-sage text-brand-brown px-5 py-2 rounded-full text-sm font-bold shadow-sm">
+                                Cena od 490 Kč
+                            </span>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 group flex flex-col h-full">
-                    <div class="h-72 bg-gray-100 overflow-hidden relative flex-shrink-0">
+                    <div class="aspect-[4/3] w-full bg-gray-100 overflow-hidden relative flex-shrink-0">
                         <img src="kabelka.jpg" alt="Liščí kabelka" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black/10 group-hover:bg-transparent transition-colors duration-300"></div>
                     </div>
@@ -149,8 +165,8 @@
                 </div>
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 group flex flex-col h-full">
-                    <div class="h-72 bg-gray-100 overflow-hidden relative flex-shrink-0">
-                        <img src="panda.jpg" alt="Červená panda" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <div class="aspect-[4/3] w-full bg-gray-100 overflow-hidden relative flex-shrink-0">
+                        <img src="makes/panda.jpg" alt="Červená panda" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black/10 group-hover:bg-transparent transition-colors duration-300"></div>
                     </div>
                     <div class="p-8 text-center flex-grow flex flex-col justify-between">
@@ -167,18 +183,36 @@
                 </div>
 
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 group flex flex-col h-full">
-                    <div class="h-72 bg-gray-100 overflow-hidden relative flex-shrink-0">
-                        <img src="medvidek.jpg" alt="Medvídek" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <div class="aspect-[4/3] w-full bg-gray-100 overflow-hidden relative flex-shrink-0">
+                        <img src="makes/little_otter.jpg" alt="Malá vydra" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black/10 group-hover:bg-transparent transition-colors duration-300"></div>
                     </div>
                     <div class="p-8 text-center flex-grow flex flex-col justify-between">
                         <div>
-                            <h3 class="text-xl font-bold mb-3">Medvídek</h3>
+                            <h3 class="text-xl font-bold mb-3">Malá vydra</h3>
                             <p class="text-gray-600 text-sm">Malý kamarád na cesty.</p>
                         </div>
                         <div class="mt-6">
                             <span class="inline-block bg-brand-sage text-brand-brown px-5 py-2 rounded-full text-sm font-bold shadow-sm">
                                 Cena od 300 Kč
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:-translate-y-2 group flex flex-col h-full">
+                    <div class="aspect-[4/3] w-full bg-gray-100 overflow-hidden relative flex-shrink-0">
+                        <img src="makes/green_hearts.jpg" alt="Zelený náramek" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-black/10 group-hover:bg-transparent transition-colors duration-300"></div>
+                    </div>
+                    <div class="p-8 text-center flex-grow flex flex-col justify-between">
+                        <div>
+                            <h3 class="text-xl font-bold mb-3">Zelený náramek - srdíčka</h3>
+                            <p class="text-gray-600 text-sm">Stylový náramek na každodenní nošení.</p>
+                        </div>
+                        <div class="mt-6">
+                            <span class="inline-block bg-brand-sage text-brand-brown px-5 py-2 rounded-full text-sm font-bold shadow-sm">
+                                Cena od 80 Kč
                             </span>
                         </div>
                     </div>
@@ -191,7 +225,7 @@
     <section id="faq" class="bg-brand-sage py-24 px-4 scroll-mt-20">
         <div class="container mx-auto max-w-3xl">
             <div class="text-center mb-12">
-                <h2 class="text-3xl font-bold relative inline-block">
+                <h2 class="text-3xl font-bold relative inline-block text-brand-brown">
                     Časté dotazy
                     <span class="absolute bottom-[-10px] left-1/2 transform -translate-x-1/2 w-16 h-1 bg-brand-rust rounded-full"></span>
                 </h2>
@@ -207,8 +241,8 @@
                     </button>
                     <div class="faq-content">
                         <div class="faq-inner">
-                            <div class="px-6 pb-6 text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
-                                <p>Zatím nemáme klasický e-shop. Objednávky přijímáme přes <strong>Instagram</strong> (do zprávy) nebo pomocí <strong>e-mailu</strong>. Napište nám, co se vám líbí, a my se vám ozveme s detaily.</p>
+                            <div class="px-4 md:px-6 pb-6 text-left text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
+                                <p>Zatím nemáme klasický e-shop. Objednávky přijímáme přes <strong>Instagram</strong> (do zprávy) nebo přes <strong class="whitespace-nowrap">e-mail</strong>. Napište nám, co se vám líbí, a my se vám ozveme s detaily.</p>
                             </div>
                         </div>
                     </div>
@@ -221,7 +255,7 @@
                     </button>
                     <div class="faq-content">
                         <div class="faq-inner">
-                            <div class="px-6 pb-6 text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
+                            <div class="px-4 md:px-6 pb-6 text-left text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
                                 <p><strong>Určitě!</strong> Milujeme nové výzvy. Pokud máte vlastní nápad na barevnou kombinaci nebo zvířátko, napište nám. Společně vymyslíme něco originálního.</p>
                             </div>
                         </div>
@@ -235,7 +269,7 @@
                     </button>
                     <div class="faq-content">
                         <div class="faq-inner">
-                            <div class="px-6 pb-6 text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
+                            <div class="px-4 md:px-6 pb-6 text-left text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
                                 <p>Jelikož jde o ruční výrobu a každému kousku věnujeme maximální péči, výroba obvykle trvá <strong>1–2 týdny</strong>. Pokud na dárek spěcháte, dejte nám vědět, zkusíme se domluvit.</p>
                             </div>
                         </div>
@@ -249,7 +283,7 @@
                     </button>
                     <div class="faq-content">
                         <div class="faq-inner">
-                            <div class="px-6 pb-6 text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
+                            <div class="px-4 md:px-6 pb-6 text-left text-gray-600 leading-relaxed border-t border-gray-100 pt-4">
                                 <p>Balíčky nejčastěji posíláme přes <strong>Zásilkovnu</strong> na vámi vybrané výdejní místo. Osobní předání je po domluvě možné v Brně.</p>
                             </div>
                         </div>
@@ -284,7 +318,24 @@
     </footer>
 
     <script>
-        // FAQ Akordeon - Plynulá animace
+        // 1. Ovládání mobilního menu
+        const btn = document.getElementById('menu-btn');
+        const menu = document.getElementById('mobile-menu');
+
+        if (btn && menu) {
+            btn.addEventListener('click', () => {
+                menu.classList.toggle('hidden');
+            });
+
+            // Zavření menu po kliknutí na odkaz
+            menu.querySelectorAll('a').forEach(link => {
+                link.addEventListener('click', () => {
+                    menu.classList.add('hidden');
+                });
+            });
+        }
+
+        // 2. FAQ Akordeon
         const faqItems = document.querySelectorAll('.faq-item');
 
         faqItems.forEach(item => {
@@ -293,7 +344,7 @@
             const icon = item.querySelector('.faq-icon');
 
             button.addEventListener('click', () => {
-                // Volitelné: Zavřít ostatní, když se klikne na jeden
+                // Zavřít ostatní (volitelné)
                 faqItems.forEach(otherItem => {
                     if (otherItem !== item) {
                         otherItem.querySelector('.faq-content').classList.remove('open');
@@ -301,7 +352,6 @@
                     }
                 });
 
-                // Přepnout třídu 'open', která spustí CSS grid animaci
                 content.classList.toggle('open');
                 icon.classList.toggle('rotate-180');
             });
